--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -55,7 +55,7 @@
                         <button class="right-tab-btn active" data-tab="structures">Structures</button>
                         <button class="right-tab-btn" data-tab="research">Research</button>
                         <button class="right-tab-btn" data-tab="transfers">Transfers</button>
-                        <button class="right-tab-btn" data-tab="probes">Probes</button>
+                        <button class="right-tab-btn" data-tab="probes">Stats</button>
                     </div>
                 </div>
                 <div class="right-panel-content">
@@ -339,6 +339,7 @@
     <script src="/static/js/ui/performance_panel.js"></script>
     <script src="/static/js/ui/visual_effects_panel.js"></script>
     <script src="/static/js/ui/summary_plot_panel.js"></script>
+    <script src="/static/js/ui/debug_panel.js"></script>
     <script src="/static/js/main.js"></script>
 </body>
 </html>
